# cratons

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
crates/cratons/: Cargo.toml  README.md
crates/cratons-benchmarks/: Cargo.toml  README.md
crates/cratons-benchmarks/benches/: lockfile.rs  manifest.rs  resolver.rs  store.rs
crates/cratons-benchmarks/src/: lib.rs
crates/cratons-builder/: Cargo.toml  README.md
crates/cratons-builder/src/: config.rs  executor.rs  graph.rs  lib.rs  rootfs.rs  spec.rs
crates/cratons-core/: Cargo.toml  README.md
crates/cratons-core/src/: ecosystem.rs  error.rs  events.rs  hash.rs  hash_normalization.rs  lib.rs  package.rs  validation.rs  version.rs
crates/cratons-credentials/: Cargo.toml
crates/cratons-credentials/src/: credentials.rs  error.rs  lib.rs  providers.rs  store.rs
crates/cratons-credentials/tests/: integration_tests.rs
crates/cratons-environment/: Cargo.toml  README.md
crates/cratons-environment/src/: activation.rs  error.rs  go.rs  java.rs  lib.rs  node.rs  python.rs  rust.rs
crates/cratons-environment/src/snapshots/: cratons_environment__activation__tests__activate_script.snap
crates/cratons-installer/: Cargo.toml  README.md
crates/cratons-installer/src/: download.rs  download_diagnostics.rs  extract.rs  lib.rs  link.rs  scripts.rs
crates/cratons-lockfile/: Cargo.toml  README.md
crates/cratons-lockfile/src/: lib.rs
crates/cratons-manifest/: Cargo.toml  README.md
crates/cratons-manifest/src/: dependency.rs  environment.rs  lib.rs  package.rs  parse.rs  scripts.rs  workspace.rs
crates/cratons-resolver/: Cargo.toml  README.md
crates/cratons-resolver/src/: features.rs  graph.rs  lib.rs  markers.rs  mvs.rs  sat.rs
crates/cratons-resolver/src/registry/: crates.rs  go.rs  maven.rs  mod.rs  npm.rs  policy.rs  pypi.rs
crates/cratons-resolver/tests/: registry_integration.rs  wiremock_integration.rs
crates/cratons-sandbox/: Cargo.toml  README.md
crates/cratons-sandbox/src/: apple_virt.rs  config.rs  container.rs  error.rs  lib.rs  linux.rs  macos.rs  process.rs  qemu.rs  result.rs  runner.rs  seccomp.rs  spec.rs  windows.rs
crates/cratons-security/: Cargo.toml  README.md
crates/cratons-security/src/: lib.rs  policy.rs
crates/cratons-store/: Cargo.toml  README.md
crates/cratons-store/src/: artifact.rs  cas.rs  config.rs  download.rs  extract.rs  gc.rs  lib.rs  link.rs  registry_cache.rs  remote.rs  toolchain.rs  verify.rs
crates/cratons-test-fixtures/: Cargo.toml  README.md
crates/cratons-test-fixtures/src/: builders.rs  fixtures.rs  lib.rs  mocks.rs  proptest.rs
crates/cratons-workspace/: Cargo.toml  README.md
crates/cratons-workspace/src/: lib.rs
crates/cratons/src/: config.rs  exit_code.rs  main.rs  observability.rs
crates/cratons/src/commands/: mod.rs  workspace.rs
crates/cratons/tests/: e2e_cli.rs  workspace_cli.rs
