[package]
name = "cratons-environment"
description = "Hermetic environment management for all ecosystems"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cratons-core = { workspace = true }
cratons-manifest = { workspace = true }
cratons-store = { workspace = true }
cratons-sandbox = { workspace = true }
cratons-lockfile = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
which = "7.0"

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
