[package]
name = "cratons-installer"
description = "Hermetic package installation for the Cratons package manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cratons-core = { workspace = true }
cratons-store = { workspace = true }
cratons-lockfile = { workspace = true }
cratons-resolver = { workspace = true }
cratons-builder = { workspace = true }
cratons-environment = { workspace = true }
cratons-sandbox = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
zip = "2.2"
xz2 = "0.1"
chrono = { workspace = true }
dirs = { workspace = true }
sha1 = "0.10"
sha2 = { workspace = true }
base64 = { workspace = true }
petgraph = { workspace = true }

[target.'cfg(windows)'.dependencies]
junction = "1.4"

[dev-dependencies]
insta = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
