[package]
name = "cratons-sandbox"
description = "Cross-platform sandboxed execution for hermetic builds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cratons-core = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
uuid = { version = "1.21", features = ["v4"] }
dirs = "6.0"
which = "8.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# nix for safe Unix bindings - resource tracking on all Unix, full features on Linux
[target.'cfg(target_os = "macos")'.dependencies.nix]
version = "0.29"
features = ["resource"]

# Linux-specific (youki/OCI integration)
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "user", "mount", "sched", "fs", "resource"] }
oci-spec = "0.8"
caps = "0.5"
libcontainer = { workspace = true }
libcgroups = { workspace = true }
libseccomp = { workspace = true }

# Windows-specific
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
