[package]
name = "cratons-security"
description = "Security auditing and SBOM generation for the Cratons package manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cratons-core = { workspace = true }
cratons-lockfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
# Policy engine
cedar-policy = "4.7.1"
# OSV cache (M-13)
humantime-serde = "1.1"
dirs = "5.0"

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true